🐛 FIX: removed white space after transform

--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -1,5 +1,6 @@
 #about {
-	margin: 0 10%;
+	margin     : 0 10%;
+	padding-top: 5em;
 }
 
 .content {
